Conectando a inovação à tabela log